--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Rails3 Subdomains", root_path, :class => 'brand' %>
 <ul class="nav">
   <li>
-    <%= link_to 'Main', root_url(:subdomain => request.domain) %>
+    <%= link_to 'Main', root_url %>
   </li>
   <% if request.subdomain.present? && request.subdomain != "www" %>
     <% if user_signed_in? %>
@@ -13,12 +13,12 @@
       </li>
     <% else %>
       <li>
-        <%= link_to 'Login', new_user_session_url %>
+        <%= link_to 'Login', new_user_session_path %>
       </li>
     <% end %>
   <% else %>
     <li>
-      <%= link_to 'Sign up', new_user_registration_url(:subdomain => request.domain) %>
+      <%= link_to 'Sign up', new_user_registration_url %>
     </li>
     <% if user_signed_in? %>
       <li>
