--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,11 @@
-
-
-<ul class="nav navbar-nav">
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="navbar-inner">
+    <div class="container">
+      
+     
+      	
+      	<%= link_to "Rails3 Subdomains", root_path, :class => 'brand' %>
+<ul class="nav">
   <li>
     <%= link_to 'Main', root_url %>
   </li>
@@ -28,3 +33,11 @@
     <% end %>
   <% end %>
 </ul>
+
+      	
+      	
+        
+      </nav>
+    </div>
+  </div>
+</header>
