--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,116 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Rails3 Subdomains" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Rails3 Subdomains" %>">
-    <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
+    <title>Timenow</title>
+    <%= stylesheet_link_tag "application", media: "all",
+                                           "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
-    <%= yield(:head) %>
+    <%= render 'layouts/shim' %>
+   
   </head>
-  <body class="<%= controller_name %> <%= action_name %>">
-    <div id="container" class="container">
-      <header>
-        <%= render 'layouts/navigation' %>
-        <%= render 'layouts/messages' %>
-      </header>
-      <div id="main" role="main">
-        <%= yield %>
-      </div>
-      <footer>
-      </footer>
-    </div> <!--! end of #container -->
+  <body>    
+        <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+
+            <!-- Brand and toggle get grouped for better mobile display -->
+
+            <div class="container-fluid">
+
+                <div class="navbar-header">
+
+                    
+						<%= link_to "Timenow", root_path, :class => 'navbar-brand' %>
+                    
+
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                   <%=render "/layouts/navigation"%>
+                </div>
+
+            </div>
+
+        </nav>
+        
+
+        <div class="container-fluid">
+        	
+
+            <!-- <div class="jumbotron">
+
+                <h1>Learn to Create Websites</h1>
+
+                <p>In today's world internet is the most popular way of connecting with the people. At <a href="http://www.tutorialrepublic.com" target="_blank">tutorialrepublic.com</a> you will learn the essential of web development technologies along with real life practice example, so that you can create your own website to connect with the people around the world.</p>
+
+                <p><a href="http://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg">Get started today</a></p>
+
+            </div> -->
+                  <%= yield %>
+
+            <div class="row">
+
+                <div class="col-xs-4">
+
+                    <h2>HTML</h2>
+
+                    <p>HTML is a markup language that is used for creating web pages. The HTML tutorial section will help you understand the basics of HTML, so that you can create your own web pages or website.</p>
+
+                    <p><a href="http://www.tutorialrepublic.com/html-tutorial/" target="_blank" class="btn btn-success">Learn More &raquo;</a></p>
+
+                </div>
+
+                <div class="col-xs-4">
+
+                    <h2>CSS</h2>
+
+                    <p>CSS is used for describing the presentation of web pages. The CSS tutorial section will help you learn the essentials of CSS, so that you can fine control the style and layout of your HTML document.</p>
+
+                    <p><a href="http://www.tutorialrepublic.com/css-tutorial/" target="_blank" class="btn btn-success">Learn More &raquo;</a></p>
+
+                </div>
+
+                <div class="col-xs-4">
+
+                    <h2>Bootstrap</h2>
+
+                    <p>Bootstrap is a powerful front-end framework for faster and easier web development. The Bootstrap tutorial section will help you learn the techniques of Bootstrap so that you can quickly create your own website.</p>
+
+                    <p><a href="http://www.tutorialrepublic.com/twitter-bootstrap-tutorial/" target="_blank" class="btn btn-success">Learn More &raquo;</a></p>
+
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="row">
+
+                <div class="col-xs-12">
+
+                    <footer>
+
+                        <p>&copy; Copyright 2013 Tutorial Republic</p>
+
+                    </footer>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+    
+    	
+
+      <%= render 'layouts/messages' %>
+     
+    </div>
   </body>
 </html>
+
+
