--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,10 @@
 
 
 <ul class="nav navbar-nav">
+	
+	<li>
+    <%= link_to 'Create new Manager', "/users/sign_in" unless current_user%>
+  </li>
   <li>
     <%= link_to 'Main', root_url %>
   </li>
