complete first 2pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,14 @@
-<h3>Home</h3>
+<!-- <h3>Home</h3>
 <% @users.each do |user| %>
   <p><%= user.name %> <%= link_to root_url(:subdomain => user.name), root_url(:subdomain => user.name) %></p>
-<% end %>
+<% end %> -->
+ <div class="jumbotron">
+
+                <h3>Employe Time tracking Made Easy</h3>
+                <h4>Designed for small buisness owner and payroll professionals</h4>
+                <h6>Save time in time tracking and payroll generation by using the simple service
+                	Timenow give employees the freedom to login and logout for shift from anywhere
+                	Using a computer or a phone</h6>
+
+               
+            </div> 
