add active theme

--- a/app/views/home/detail_and_pricing.html.erb
+++ b/app/views/home/detail_and_pricing.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
 
-                <div class="col-xs-4" style="box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);margin-top: 90px;">
+                <div class="col-xs-4" style="box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);margin-top: 15px;margin-left: 10px;padding: 29px;">
                 	<h3>Time now corporate plan</h3>
                 	<p>CSS is used for describing the presentation of web pages. The CSS tutorial section will help you learn the essentials of CSS, so that you can fine control the style and layout of your HTML document.</p>
                     
                 </div>
 
-                <div class="col-xs-4" style="margin-top: 90px;text-align: center;">
+                <div class="col-xs-4" style="margin-top: 15px;text-align: center;margin-left: 10px;">
 
                     <h5>Time Now Corporate pricing</h5>
                     <h3>$49 per month</h3>
@@ -18,14 +18,14 @@
                     <h5>$0.06,per phone clock </h5>
                     <button class="btn btn-success">SIGN UP</button>
                 </div>
-                <div class="col-xs-4" style="box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);margin-top: 90px;">
+                <div class="col-xs-4" style="box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);margin-left: -38px;margin-top: 15px;padding: 29px;">
                 	<h3>How are payments made?</h3>
                       <p>CSS is used for describing the presentation of web pages. The CSS tutorial section will help you learn the essentials of CSS, so that you can fine control the style and layout of your HTML document.</p>
                     
 
                 </div>
 
-                <div class="col-xs-4" style="box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);margin-left: 396px;margin-top: 45px;">
+                <div class="col-xs-4" style="box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);margin-left: 420px;margin-top: 45px;">
                 	<h3>How are payments made?</h3>
                       <p>CSS is used for describing the presentation of web pages. The CSS tutorial section will help you learn the essentials of CSS, so that you can fine control the style and layout of your HTML document.</p>
                     
