--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <% @users.each do |user| %>
   <p><%= user.name %> <%= link_to root_url(:subdomain => user.name), root_url(:subdomain => user.name) %></p>
 <% end %> -->
- <div class="jumbotron">
+ <!-- <div class="jumbotron">
 
                 <h3>Employe Time tracking Made Easy</h3>
                 <h4>Designed for small buisness owner and payroll professionals</h4>
@@ -11,4 +11,21 @@
                 	Using a computer or a phone</h6>
 
                
-            </div> 
+            </div>  -->
+            
+<div class="row">
+	<div style="margin-left: 418px;">
+		<h3>Employe Time tracking Made Easy</h3>
+                <h4>Designed for small buisness owner and payroll professionals</h4>
+                <h6>Save time in time tracking and payroll generation by using the simple service
+                	Timenow give employees the freedom to login and logout for shift from anywhere
+                	Using a computer or a phone</h6>
+	</div>
+	             
+
+                <div class="col-xs-4" style="box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);margin-top: 15px;margin-left: 418px;padding: 29px;">
+                	<h3>Time now corporate plan</h3>
+                	<p>CSS is used for describing the presentation of web pages. The CSS tutorial section will help you learn the essentials of CSS, so that you can fine control the style and layout of your HTML document.</p>
+                    
+                </div>
+               </div> 
