--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 
 
-<ul class="nav navbar-nav">
+<ul class="nav navbar-nav navbar-right">
 	
 	<li>
     <% link_to 'Create new Manager', "/users/sign_in" unless current_user%>
