--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,38 +2,56 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Timenow</title>
+    <title>TimeNow</title>
     <%= stylesheet_link_tag "application", media: "all",
                                            "data-turbolinks-track" => true %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>    
+	<!-- Latest compiled and minified CSS -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	<link rel="stylesheet" type="text/css" href="../assets/style.css">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+	<!--Angular JS-->
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
+
+	<!--Jquery-->
+	<!-- Load jQuery JS -->
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <!-- Load jQuery UI Main JS  -->
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    
+    <!-- Load SCRIPT.JS which will create datepicker for input field  -->
+    
     <%= csrf_meta_tags %>
     <%= render 'layouts/shim' %>
    
   </head>
   <body>    
-        <nav id="myNavbar" class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
-
-            <!-- Brand and toggle get grouped for better mobile display -->
-
-            <div class="container-fluid">
-
-                <div class="navbar-header">
-
-                    
-						<%= link_to "Timenow", root_path, :class => 'navbar-brand' %>
-                    
-
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                   <%=render "/layouts/navigation"%>
-                </div>
-
-            </div>
-
-        </nav>
+       <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home"></span> TimeNow</a>
+    </div>
+      <%=render "/layouts/navigation"%>
+   
+      <!-- <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Logout</a></li>
+        <li><a href="#">Help</a></li>
+        
+      </ul> -->
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
         
 
         <div class="container-fluid">
@@ -49,7 +67,7 @@
 
                     <footer>
 
-                        <p>&copy; Copyright 2013 Tutorial Republic</p>
+                        <p>&copy; Copyright 2013 Timenow</p>
 
                     </footer>
 
@@ -64,9 +82,8 @@
     
     	
 
-      <%= render 'layouts/messages' %>
-     
-    </div>
+      <%= render 'layouts/messages' %>     
+    
   </body>
 </html>
 
