--- a/app/views/home/detail_and_pricing.html.erb
+++ b/app/views/home/detail_and_pricing.html.erb
@@ -26,10 +26,29 @@
                 </div>
 
                 <div class="col-xs-4" style="box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);margin-left: 420px;margin-top: 45px;">
-                	<h3>How are payments made?</h3>
-                      <p>CSS is used for describing the presentation of web pages. The CSS tutorial section will help you learn the essentials of CSS, so that you can fine control the style and layout of your HTML document.</p>
-                    
+                				  	  
+			  
+                  <div>
+                         <form class="form-inline" role="form">
+                          <div class="form-group">
+                          	<label for="manager">Enter number of Manager</label>
+                            <input type="text" class="form-control"  placeholder="First Name">                              
+                          </div>
+                          
+                          <div class="form-group">
+                          	<label for="manager">Enter number of Employees</label>
+                            <input type="text" class="form-control"  placeholder="First Name">                              
+                          </div><br/>
+                          <div class="form-group">
+                          	<label for="manager">Enter number of Phone checkin permonth </label>
+                            <input type="text" class="form-control"  placeholder="First Name">                              
+                          </div>
+                         
+                          <button class="btn btn-success">Calculate </button>
+                          
+                        </form>
+                  </div>
+                  <div>
+               	
 
-                </div>
-
-            </div>
+            
