--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
                   <%= yield %>
             <hr>
 
-            <div class="row">
+            <!-- <div class="row">
 
                 <div class="col-xs-12">
 
@@ -73,7 +73,7 @@
 
                 </div>
 
-            </div>
+            </div> -->
 
         </div>
 
