complete signup css

--- a/app/views/home/detail_and_pricing.html.erb
+++ b/app/views/home/detail_and_pricing.html.erb
@@ -16,7 +16,7 @@
                     <h5>$4,Additional per users</h5>
                     <hr />
                     <h5>$0.06,per phone clock </h5>
-                    <%= link_to 'Signup', new_user_registration_path(:plan => 'gold'), :class => 'btn btn-primary' %>
+                    <%= link_to 'Signup',new_manager_path , :class => 'btn btn-primary' %>
                 </div>
                 <div class="col-xs-4" style="box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);margin-left: -38px;margin-top: 15px;padding: 29px;">
                 	<h3>How are payments made?</h3>
