complete manager form and employe creation

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,8 +3,8 @@
 <ul class="nav navbar-nav navbar-right">
 	
 	<li>
-    <% link_to 'Create new Manager', "/users/sign_in" unless current_user%>
-    <%= link_to 'Pricing', "/pricing" %>
+    <%= link_to 'Add employe',new_manager_employee_path(current_user) if current_user && current_user.manager %>
+    <%= link_to 'Pricing', "/pricing" unless current_user%>
   </li>
   <li>
     <%= link_to 'Main', root_url %>
@@ -24,7 +24,8 @@
     <% end %>
   <% else %>
     <li>
-      <%= link_to 'Sign up', new_user_registration_url %>
+      <% link_to 'Sign up', new_user_registration_url %>
+      <%= link_to 'Login', new_user_session_path %>
     </li>
     <% if user_signed_in? %>
       <li>
