--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,9 @@
 
                
             </div>  -->
-            
+            <!-- <script type="text/javascript" src="res/jquery.min.js"></script> -->
+    
+           
 <div class="row">
 	<div style="margin-left: 418px;">
 		<h3>Employe Time tracking Made Easy</h3>
@@ -29,3 +31,4 @@
                     
                 </div>
                </div> 
+ 
