--- a/app/views/employees/shift.html.erb
+++ b/app/views/employees/shift.html.erb
@@ -1,8 +1,11 @@
 <script type="text/javascript" src="../assets/jquery.timer.js"></script>
 <script type="text/javascript">
-	
+	$(document).ready(function(){
+		$("#check_out").hide();
+	})
 	$(document).on("click","#check_in",function(){
 		$("#stopwatch").stopwatch().stopwatch('start');
+		var emp_id=$(this).attr("employee_id");
 		if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(success, error);
 		} else {
@@ -18,6 +21,9 @@
 			var processData={
 				'shift[latitude]': lati,
 				'shift[longitude]': longi, 
+				'shift[employee_id]': emp_id,
+				'shift[start_time]':"",
+				'shift[date]':""
 				
 			}			
 			$("#ip").html(lati);
@@ -28,7 +34,9 @@
 				dataType: datatype,
 				data: processData,
 				success: function(data){
-				alert("success")
+					$("#check_out").attr("shift_id",data.id)
+					$("#check_in").hide();
+					$("#check_out").show();				
 				},
 				error: function(e){
 					alert("fail")
@@ -42,8 +50,11 @@
 			$("#address").html( typeof msg == 'string' ? msg : "error");
 		}
 	});
+// For checkout process
+
 $(document).on("click","#check_out",function(){
 		$("#stopwatch").stopwatch().stopwatch('stop');
+		var shift_id=$(this).attr("shift_id");
 		if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(success, error);
 		} else {
@@ -51,15 +62,15 @@ $(document).on("click","#check_out",function(){
 		}
 
 		function success(position) {
-			var url="/shifts/"+
+			var url="/shifts/"+shift_id
 			var type="PUT"
 			var datatype="json"
 			var lati=position.coords.latitude
 			var longi=position.coords.longitude
 			var processData={
 				'shift[latitude]': lati,
-				'shift[longitude]': longi, 
-				
+				'shift[longitude]': longi, 				
+				'shift[end_time]':""
 			}			
 			$("#ip").html(lati);
 			$("#address").html(longi);
@@ -69,7 +80,9 @@ $(document).on("click","#check_out",function(){
 				dataType: datatype,
 				data: processData,
 				success: function(data){
-				alert("success")
+					$("#check_out").attr("shift_id","")
+					$("#check_out").hide();
+					$("#check_in").show();				
 				},
 				error: function(e){
 					alert("fail")
@@ -92,8 +105,8 @@ $(document).on("click","#check_out",function(){
 			<b><span id="stopwatch">00:00:00</span></b>
 		</div>
 		<p>
-			<input type='button' value='Check-in' id="check_in" class="btn btn-primary"/>
-			<input type='button' value='Check-out' class="btn btn-primary" onclick='stop();' />
+			<input type='button' value='Check-in' employee_id="<%=current_user.employee.id%>" id="check_in" class="btn btn-primary"/>
+			<input type='button' value='Check-out' id="check_out" shift_id="" class="btn btn-primary" onclick='stop();' />
 		</p>
 
 		<p>
