--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,9 +16,9 @@
   padding-right: 8px;
 }
 ul.nav {
-  list-style: none;
-  margin: 0 0 2em;
-  padding: 0;
+    list-style: none outside none;
+    margin: 0 !important;
+    padding: 0;
 }
 ul.nav li {
   display: inline;
