--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -104,7 +104,7 @@ body
     float: right;
 }
 
-.form-control {
+.form-control1 {
     background-color: #fff;
     background-image: none;
     border: 1px solid #ccc;
@@ -124,4 +124,10 @@ body
     vertical-align: middle;
     white-space: nowrap;
     width: 20%;
+}
+.login-btn {
+    padding-left: 195px ;
+}
+.forget-password {
+    padding-left: 210px;
 }
