--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-	<link rel="stylesheet" type="text/css" href="../assets/style.css">
+	<!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" /> -->
+	<!-- <link rel="stylesheet" type="text/css" href="../assets/style.css"> -->
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -35,30 +35,26 @@
     <% render 'layouts/shim' %>
    
   </head>
-  <body class="<%= controller_name %> <%= action_name %>">    
-       <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home"></span> TimeNow</a>
-    </div>
-      <%=render "/layouts/navigation"%>
+  <body>    
+  	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+  		<div class="container-fluid">
+    	<!-- Brand and toggle get grouped for better mobile display -->
+    		<div class="navbar-header">
+      			<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home"></span> TimeNow</a>
+    		</div>
+      		<%=render "/layouts/navigation"%>
    
-      <!-- <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Logout</a></li>
-        <li><a href="#">Help</a></li>
-        
-      </ul> -->
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-        
-
-        <div class="container-fluid">
-        	
-
-           
+	      	<!-- <ul class="nav navbar-nav navbar-right">
+	        <li><a href="#">Home</a></li>
+	        <li><a href="#">Logout</a></li>
+	        <li><a href="#">Help</a></li>
+	        
+		      </ul> -->
+		    <!-- </div><!-- /.navbar-collapse --> 
+    	</div><!-- /.container-fluid -->
+	</nav>
+    <div class="container-fluid">
+             
                   <%= yield %>
             <hr>
 
